src/styles/tutCard.css
code {
  background: #e5e5e5;
  padding: 0.2rem 0.5rem;
  border-radius: 100px;
}

.tutCard {
  position: relative;
  height: 10rem;
  width: 100%;
  background: #fff;
  border-radius: 10px;
  margin-top: 1rem;
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  padding: 0.8rem;
  transition: all 0.3s ease-in-out;
}

.tutCard:hover {
  scale: 1.01;
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
}

.tutCard .tutCardImg {
  height: 100%;
  width: 10rem;
  border-radius: 5px;
  overflow: hidden;
  margin-right: 1rem;
}

.tutCard .tutCardImg .hero-image {
  height: 100%;
  width: 100%;
  object-fit: contain;
}
.tutCard .tutCardText {
  max-width: 60%;
}

.tutCard .tutCardText p {
  width: 100%;
  font-size: 0.8rem;
  font-weight: 400;
  margin: 0.5rem 0;
  color: #9ca3af;
}

.tutCard .tutCardText p a {
  font-weight: 600;
  color: #4b5563;
  text-decoration: none;
}

.tutCard .tutCardText a:hover {
  color: #fca311;
}

.tutCard .additionals {
  position: absolute;
  top: 0.8rem;
  right: 0.8rem;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  font-size: 1.2rem;
  color: #4b5563;
}

.tutCard .additionals a {
  margin: 0 0.25rem;
}

.tutCard .additionals a:hover {
  color: #fca311;
}

.tutCard .videos {
  position: absolute;
  top: 2.5rem;
  right: 0.8rem;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  font-size: 1.2rem;
  color: #4b5563;
}

.tutCard .videos a {
  margin: 0 0.25rem;
}

.tutCard .videos a:hover {
  color: #fca311;
}

.tutCard .status {
  position: absolute;
  bottom: 0.8rem;
  right: 0.8rem;
  padding: 0.3rem;
  border-radius: 100px;
  color: #fff;
  font-size: 0.8rem;
  font-weight: 600;
}

.stable {
  background: #10b981;
}

.beta {
  background: #fca311;
}

.alpha {
  background: #ef4444;
}

@media screen and (max-width: 540px) {
  .tutCard {
    flex-direction: column;
    height: auto;
  }

  .tutCard .tutCardImg {
    height: 10rem;
    width: 100%;
    margin: 0;
    margin-bottom: 1rem;
  }

  .tutCard .tutCardText {
    max-width: 95%;
  }

  .tutCard .additionals {
    width: 100%;
    position: relative;
    justify-content: flex-start;
    top: 0;
    right: 0;
  }
}

